--- a/estilo.css
+++ b/estilo.css
@@ -185,7 +185,7 @@ label {
 
 .slider {
   margin: auto;
-  width: 50%;
+  width: 75%;
   /* height: 500px; */
   overflow: hidden;
 }
@@ -204,7 +204,7 @@ label {
 
 .slider__intro img {
   width: 100%;
-  height: 500px;
+  height: 100%;
 }
 
 /* .slider__img {
