--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,3 +13,11 @@
 @import "./footer/footer";
 
 @import "./media/media";
+
+@import "./historia/historia";
+
+@import "./eventos/eventos";
+
+@import "./servicios/servicios";
+
+@import "./contacto/contacto";
