--- a/sass/tarjetas/_tarjetas.scss
+++ b/sass/tarjetas/_tarjetas.scss
@@ -5,17 +5,17 @@
   margin: 54px;
 }
 
-.container__director section {
+.container__tarjeta section {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
   margin: auto;
   width: 100%;
   max-width: 1200px;
-  height: 430px;
+  height: 388px;
 }
 
-.container__director .imagenes {
+.container__tarjeta .imagenes {
   width: 330px;
   height: 330px;
   border-radius: 8px;
@@ -27,17 +27,57 @@
   transition: all 0.25s;
 }
 
-.container__director .imagenes:hover {
+.container__tarjeta .imagenes:hover {
   transform: translate(-15px);
   box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
 }
 
-.container__director .imagenes img {
+.container__tarjeta .imagenes img {
   width: 250px;
   height: 250px;
 }
 
-.container__director .imagenes p {
+.container__tarjeta .imagenes p {
+  padding: 0 1rem;
+  font-size: 16px;
+  font-weight: 300;
+}
+
+/* AQUI INICIA LAS TARJETAS DE SERVICIOS */
+
+.container__tarjeta1 section {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  margin: auto;
+  width: 100%;
+  max-width: 1200px;
+  height: 388px;
+}
+
+.container__tarjeta1 .imagenes {
+  width: 330px;
+  height: 330px;
+  border-radius: 8px;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+  margin: 20px;
+  text-align: center;
+  background-color: transparent;
+  transition: all 0.25s;
+}
+
+.container__tarjeta1 .imagenes:hover {
+  transform: translate(-15px);
+  box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
+}
+
+.container__tarjeta1 .imagenes img {
+  width: 250px;
+  height: 250px;
+}
+
+.container__tarjeta1 .imagenes p {
   padding: 0 1rem;
   font-size: 16px;
   font-weight: 300;
